bug(#671): line ranges support in `LtUnlint` (#684)
* bug(#671): tests

* bug(#671): passes

* bug(#671): test for all out of range

* bug(#671): clean for qulice and errorprone

* bug(#671): puzzle for DefectMissing

* bug(#671): exclude vulnerable commons3

* bug(#671): keep commons-lang3 in tests

--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,11 @@
       </exclusions>
     </dependency>
     <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <!-- version from the parent pom -->
+    </dependency>
+    <dependency>
       <groupId>com.yegor256</groupId>
       <artifactId>mktmp</artifactId>
       <version>0.0.5</version>
